# BCIT-Sailbot

./: .gitignore  CMakeLists.txt  Makefile  README.md  Sponsor Wish List  mkdocs.yml  test.txt
.github/: PULL_REQUEST_TEMPLATE.md  issue_template.md
Documentation/: sponsorPackage.tex
ZeroMQ/: readme.txt
cape/: sailcape-cache.lib  sailcape.bak  sailcape.pro  sailcape.sch
client/: client.cpp
docs/: contact.md  designReport.tex  home.md  index.md  sponsorship.md
include/: LUT.hpp  astar.hpp  datalogger.hpp  datapoint.hpp  foil.hpp  node.hpp  pathList.h  queue.h  sail.hpp  sailbot.hpp  sbThreads.hpp  serialStream.hpp  system.conf  var-table.hpp  varTable.hpp  vect.hpp
meetings/: 2017-01-18.md  2017-01-18.txt  2017-01-25.md
navigation/: CMakeLists.txt  README.md  SConstruct
pathfinding/: aSharp.cc  control.py  findPath.c  modelFunc.py  node.c  node.cc  node.h  pid.c  pid.h  plot.py  sailbot.cc  sailbot.h  stack.h  threading.cc
sailbot-navigation/: .sconsign.dblite  README.md  nav-node-test
sailbot-system/: Makefile
sailbotSystem/: aStar.cpp  aStar.hpp  aStarTest.cpp  command.cpp  gps.cpp  gpsfake.cpp  master.cpp  path.cpp  sailbotTypes.h  server.cpp
source/: LUT.cpp  aStar.cpp  actControl.cpp  foil.cpp  (+21 more)
system/: CMakeLists.txt
system/include/: .bridge.hpp.swp  bosch-imu.hpp  bridge.hpp  client.hpp  daemon-gps.hpp  factories.hpp  gps.hpp  imu.hpp  kalman.hpp  measurement.hpp  polling-thread.hpp  radio.hpp  servo.hpp  sim-gps.hpp  types.hpp  wind.hpp
system/proto/: Configuration.proto
system/src/: bridge.cpp  daemon-gps.cpp  gps.old.cpp  main.cpp
(+114 files in other folders)
